--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["Jeyko Caicedo <jakeactually@outlook.com>"]
 [dependencies]
 piston_window = "0.70.0"
 rand = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
